[FEATURE] Prevent overflow of thumbnails over padded layouts.
[Resolves #67]

--- a/css/base.css
+++ b/css/base.css
@@ -558,7 +558,7 @@ div.aligncenter {
   max-width: 300px;
   border-right: 5px solid #fff;
   border-left: 5px solid #fff;
-  border-bottom: 10px solid #fff;
+  border-top: 10px solid #fff;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
